<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".alarm.SetAlarm">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/date"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:textColor="#ff000000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/hour"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:textColor="#ff000000"
            android:textSize="30sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recurence"
        android:text="@string/setRecurrence"
        android:textSize="20sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msg"
        android:hint="@string/label2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Accept"
            android:layout_weight="1"
            android:id="@+id/accept" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_weight="1"
            android:id="@+id/cancel" />

    </LinearLayout>

</LinearLayout>